# CharraEngine

./: .gitignore  CMakeLists.txt  README.md
CharraEngine/: CMakeLists.txt
CharraEngine/Core/: Application.cpp  Application.hpp  Events.cpp  Events.hpp  Logging.cpp  Logging.hpp
CharraEngine/Draw2D/: Quad.cpp  Quad.hpp
CharraEngine/GUI/: Containers.cpp  Containers.hpp  GUI.cpp  GUI.hpp  Square.cpp  Square.hpp
CharraEngine/GUI/Widgets/: AbstractWidget.hpp  Button.hpp  Taskbar.hpp  Window.hpp
CharraEngine/Math/: MathFunctions.cpp  MathFunctions.hpp  MathTypes.cpp  MathTypes.hpp  RendererTypes.hpp
CharraEngine/Platform/: Platform.hpp  Timer.hpp
CharraEngine/Platform/Windows/: Platform.cpp  Timer.cpp
CharraEngine/Renderer/: Canvas.cpp  Canvas.hpp  GUI.cpp  GUI.hpp  Material.cpp  Material.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
CharraEngine/Shaders/: SimpleVertex.spv
CharraEngine/Shaders/GLSL/: SimpleVertex.Vert  compile.bat
CharraEngine/Vulkan/: CommandBuffers.cpp  CommandBuffers.hpp  Device.cpp  Device.hpp  Images.cpp  Images.hpp  Instance.cpp  Instance.hpp  MemoryManager.cpp  MemoryManager.hpp  Pipeline.cpp  Pipeline.hpp  Renderpass.cpp  Renderpass.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp  Syncronization.cpp  Syncronization.hpp  ValidationLayers.cpp  ValidationLayers.hpp  VulkanContext.cpp
CharraEngine/Vulkan/Allocator/: Allocator.cpp  Allocator.hpp  Buffer.hpp  BufferManager.cpp  BufferManager.hpp  DeviceAllocator.cpp  DeviceAllocator.hpp  HostAllocator.cpp  HostAllocator.hpp
Libs/vulkan/: CMakeLists.txt
Sandbox/: Main.cpp
